[package]
name = "tesseract-native"
version = "0.0.1"
authors = ["ledunguit <ledung.itsme@gmail.com>"]
description = "Native tesseract-ocr library for executable application. Rebuild from: https://github.com/fschutt/tesseract-static-rs by fschutt"
license = "Apache-2.0"
keywords = ["tesseract", "leptonica", "ocr", "text-recognition"]
categories = ["computer-vision"]
edition = "2021"
build = "build.rs"

[dependencies]
libc = "0.2.140"
rayon = "1.7.0"
thiserror = "1.0.39"

[build-dependencies]
# bindgen = "0.64.0"
cmake = "0.1.49"
fs_extra = "1.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
reqwest = { version = "0.11.14", features = ["blocking"] }
